name: roombajs
version: 0.1.0
synopsis: a strongly typed web interface for your vacuum cleaner
author: Mark Mazumder
build-type: Simple
cabal-version: >= 1.18

executable roombajs
  default-language: Haskell2010
  main-is:      app.hs
  -- ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: ./
  other-extensions: RecursiveDo
                    OverloadedStrings
                    TupleSections
                    ScopedTypeVariables
                    ForeignFunctionInterface
                    JavaScriptFFI
                    CPP
  build-depends: base
               , reflex
               , reflex-dom
               , ghcjs-dom
               , ghcjs-prim
               , time
               , containers
               , transformers
