name: botserver
version: 0.1.0
synopsis: a strongly typed REST API for your vacuum cleaner
author: Mark Mazumder
build-type: Simple
cabal-version: >= 1.18

library
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: ./
  exposed-modules:  BotApi
  other-extensions: TemplateHaskell
                    OverloadedStrings
                    ScopedTypeVariables
                    RecordWildCards
                    NoMonomorphismRestriction
                    DisambiguateRecordFields
                    TypeFamilies
                    QuasiQuotes
                    DataKinds
                    DeriveGeneric
                    FlexibleInstances
  build-depends: aeson >= 0.8
               , base >=4.8 && < 5
               , either
               , servant
               , servant-server
               , wai
               , wai-extra
               , warp
               , text
               , transformers
               , attoparsec
               , vector
               , bytestring
               , containers
               , serialport
               , stm
               , async
               , directory

executable botserver
  default-language: Haskell2010
  main-is:      Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: ./
  other-modules:    BotApi
  other-extensions: TemplateHaskell
                    OverloadedStrings
                    ScopedTypeVariables
                    RecordWildCards
                    NoMonomorphismRestriction
                    DisambiguateRecordFields
                    TypeFamilies
                    QuasiQuotes
                    DataKinds
                    DeriveGeneric
                    FlexibleInstances
  build-depends: aeson >= 0.8
               , base >=4.8 && < 5
               , either
               , servant
               , servant-server
               , wai
               , wai-extra
               , warp
               , text
               , transformers
               , attoparsec
               , vector
               , bytestring
               , containers
               , serialport
               , stm
               , async
               , directory
